<resources>
    <string name="app_name">Game News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="favorites">Favorites</string>
    <string name="cover_image">Cover Image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="action_logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_title_available">No title available</string>
    <string name="no_description_available">No description available</string>
    <string name="no_game">No Game</string>

    <string name="message_fav_saved">Favorite saved</string>
    <string name="message_fav_deleted">Favorite deleted</string>
    <string name="message_session_expired_title">Session lost</string>
    <string name="message_session_expired">Session has expired. Please login again.</string>
    <string name="message_no_internet">Unable to connect to internet. Please check your connection</string>
    <string name="message_net_failure">Unable to complete. Please try again later</string>
</resources>
