<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:clipToPadding="false"
    android:paddingBottom="80dp"
    tools:context="com.gamma.gamenews.Fragment.NewsDetailFragment">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">
            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/no_image"
                android:contentDescription="@string/cover_image" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/scrim_bottom">
                <ImageView
                    android:id="@+id/btn_favorite"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/favorites"
                    app:srcCompat="@drawable/ic_favorite_border"
                    android:tint="@color/colorAccent"/>
                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_above="@id/txt_subtitle"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/no_title_available"
                    android:textColor="#fff" />
                <TextView
                    android:id="@+id/txt_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/txt_game"
                    android:gravity="center_vertical"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/no_description_available"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="#fff" />
                <TextView
                    android:id="@+id/txt_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:textAppearance="?android:textAppearanceButton"
                    android:background="@drawable/chip_style"
                    android:text="@string/no_game"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="#fff" />

            </RelativeLayout>
        </FrameLayout>
        <TextView
            android:id="@+id/txt_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:text="No article
             body"/>
    </LinearLayout>
</ScrollView>
